--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2002,7 +2002,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; }
+  font-family: Raleway, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; }
 
 ul:not(.browser-default) {
   padding-left: 0;
@@ -2061,10 +2061,11 @@ a {
 blockquote {
   margin: 20px 0;
   padding-left: 1.5rem;
-  border-left: 5px solid #f5f5f5; }
+  border-left: 5px solid #fafafa; }
 
 i {
-  line-height: inherit; }
+  line-height: inherit;
+  color: #d4d4d4; }
   i.left {
     float: left;
     margin-right: 15px; }
@@ -2100,7 +2101,7 @@ video.responsive-video {
   .pagination li.active a {
     color: #fff; }
   .pagination li.active {
-    background-color: #f5f5f5; }
+    background-color: #fafafa; }
   .pagination li.disabled a {
     cursor: default;
     color: #999; }
@@ -2242,7 +2243,7 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   color: #fff;
-  background-color: #f5f5f5; }
+  background-color: #fafafa; }
   .page-footer .footer-copyright {
     overflow: hidden;
     min-height: 50px;
@@ -2373,14 +2374,14 @@ td, th {
     .collection .collection-item:last-child {
       border-bottom: none; }
     .collection .collection-item.active {
-      background-color: #eeeeee;
+      background-color: #ffab91;
       color: white; }
       .collection .collection-item.active .secondary-content {
         color: #fff; }
   .collection a.collection-item {
     display: block;
     transition: .25s;
-    color: #eeeeee; }
+    color: #ffab91; }
     .collection a.collection-item:not(.active):hover {
       background-color: #ddd; }
   .collection.with-header .collection-header {
@@ -2394,7 +2395,7 @@ td, th {
 
 .secondary-content {
   float: right;
-  color: #eeeeee; }
+  color: #ffab91; }
 
 .collapsible .collection {
   margin: 0;
@@ -2426,10 +2427,10 @@ td, th {
     top: 0;
     left: 0;
     bottom: 0;
-    background-color: #eeeeee;
+    background-color: #ffab91;
     transition: width .3s linear; }
   .progress .indeterminate {
-    background-color: #eeeeee; }
+    background-color: #ffab91; }
     .progress .indeterminate:before {
       content: '';
       position: absolute;
@@ -2529,7 +2530,7 @@ span.badge {
     font-weight: 300;
     font-size: 0.8rem;
     color: #fff;
-    background-color: #eeeeee;
+    background-color: #ffab91;
     border-radius: 2px; }
   span.badge.new:after {
     content: " new"; }
@@ -2566,15 +2567,18 @@ table span.badge {
 .container {
   margin: 0 auto;
   max-width: 1280px;
-  width: 90%; }
+  width: 90%;
+  margin-top: 3vh; }
 
 @media only screen and (min-width: 601px) {
   .container {
-    width: 85%; } }
+    width: 85%;
+    margin-top: 6vh; } }
 
 @media only screen and (min-width: 993px) {
   .container {
-    width: 70%; } }
+    width: 70%;
+    margin-top: 8vh; } }
 
 .col .row {
   margin-left: -0.75rem;
@@ -3139,7 +3143,7 @@ table span.badge {
 
 nav {
   color: #212121;
-  background-color: #f5f5f5;
+  background-color: #fafafa;
   width: 100%;
   height: 30px;
   line-height: 30px; }
@@ -3218,11 +3222,13 @@ nav {
     nav ul li {
       transition: background-color .3s;
       float: left;
-      padding: 0; }
+      padding: 0;
+      width: 25%;
+      text-align: center; }
       nav ul li.active {
         background-color: rgba(0, 0, 0, 0.1); }
     nav ul a {
-      transition: background-color 1.5s;
+      transition: background-color 3s;
       font-size: 1rem;
       color: #212121;
       display: block;
@@ -3236,8 +3242,8 @@ nav {
           height: inherit;
           line-height: inherit; }
       nav ul a:hover {
-        background-color: rgba(0, 0, 0, 0.1);
-        transition: 1.5s; }
+        background-color: #ff7145;
+        transition: 3s; }
     nav ul.left {
       float: left; }
   nav form {
@@ -3271,21 +3277,22 @@ nav {
 
 @media only screen and (min-width: 601px) {
   nav.nav-extended .nav-wrapper {
-    min-height: 30px; }
+    min-height: 40px; }
   nav, nav .nav-wrapper i, nav a.sidenav-trigger, nav a.sidenav-trigger i {
-    height: 30px;
-    line-height: 30px;
+    height: 40px;
+    line-height: 40px;
     position: sticky;
-    top: 0; }
+    top: 0;
+    z-index: 1000; }
   .navbar-fixed {
-    height: 30px; } }
+    height: 40px; } }
 
 a {
   text-decoration: none; }
 
 html {
   line-height: 1.5;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: Raleway, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-weight: normal;
   color: rgba(0, 0, 0, 0.87); }
   @media only screen and (min-width: 0) {
@@ -3652,7 +3659,7 @@ small {
     margin: 0;
     text-transform: uppercase; }
     .tabs .tab a {
-      color: rgba(245, 245, 245, 0.7);
+      color: rgba(250, 250, 250, 0.7);
       display: block;
       width: 100%;
       height: 100%;
@@ -3666,10 +3673,10 @@ small {
         outline: none; }
       .tabs .tab a:hover, .tabs .tab a.active {
         background-color: transparent;
-        color: #f5f5f5; }
+        color: #fafafa; }
     .tabs .tab.disabled a,
     .tabs .tab.disabled a:hover {
-      color: rgba(245, 245, 245, 0.4);
+      color: rgba(250, 250, 250, 0.4);
       cursor: default; }
   .tabs .indicator {
     position: absolute;
@@ -3792,18 +3799,18 @@ small {
 
 .btn:focus, .btn-large:focus, .btn-small:focus,
 .btn-floating:focus {
-  background-color: #d5d5d5; }
+  background-color: #ff845e; }
 
 .btn, .btn-large, .btn-small {
   text-decoration: none;
   color: #fff;
-  background-color: #eeeeee;
+  background-color: #ffab91;
   text-align: center;
   letter-spacing: .5px;
   transition: background-color .2s ease-out;
   cursor: pointer; }
   .btn:hover, .btn-large:hover, .btn-small:hover {
-    background-color: #fbfbfb; }
+    background-color: #ffbeab; }
 
 .btn-floating {
   display: inline-block;
@@ -3815,13 +3822,13 @@ small {
   height: 40px;
   line-height: 40px;
   padding: 0;
-  background-color: #eeeeee;
+  background-color: #ffab91;
   border-radius: 50%;
   transition: background-color .3s;
   cursor: pointer;
   vertical-align: middle; }
   .btn-floating:hover {
-    background-color: #eeeeee; }
+    background-color: #ffab91; }
   .btn-floating:before {
     border-radius: 0; }
   .btn-floating.btn-large {
@@ -3946,7 +3953,7 @@ button.btn-floating {
     z-index: -1;
     width: 40px;
     height: 40px;
-    background-color: #eeeeee;
+    background-color: #ffab91;
     border-radius: 50%;
     transform: scale(0); }
 
@@ -4014,7 +4021,7 @@ button.btn-floating {
       height: 1px; }
     .dropdown-content li > a, .dropdown-content li > span {
       font-size: 16px;
-      color: #eeeeee;
+      color: #ffab91;
       display: block;
       line-height: 22px;
       padding: 14px 16px; }
@@ -4380,7 +4387,7 @@ select:focus {
 
 button:focus {
   outline: none;
-  background-color: #f8f8f8; }
+  background-color: #ffbba5; }
 
 label {
   font-size: 0.8rem;
@@ -4486,8 +4493,8 @@ textarea.materialize-textarea {
   input[type=number]:not(.browser-default):focus:not([readonly]),
   input[type=search]:not(.browser-default):focus:not([readonly]),
   textarea.materialize-textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #eeeeee;
-    box-shadow: 0 1px 0 0 #eeeeee; }
+    border-bottom: 1px solid #ffab91;
+    box-shadow: 0 1px 0 0 #ffab91; }
   input:not([type]):focus:not([readonly]) + label,
   input[type=text]:not(.browser-default):focus:not([readonly]) + label,
   input[type=password]:not(.browser-default):focus:not([readonly]) + label,
@@ -4501,7 +4508,7 @@ textarea.materialize-textarea {
   input[type=number]:not(.browser-default):focus:not([readonly]) + label,
   input[type=search]:not(.browser-default):focus:not([readonly]) + label,
   textarea.materialize-textarea:focus:not([readonly]) + label {
-    color: #eeeeee; }
+    color: #ffab91; }
   input:not([type]):focus.valid ~ label,
   input[type=text]:not(.browser-default):focus.valid ~ label,
   input[type=password]:not(.browser-default):focus.valid ~ label,
@@ -4792,7 +4799,7 @@ textarea.materialize-textarea + label:after, .select-wrapper + label:after {
     transition: color .2s;
     top: 0.5rem; }
     .input-field .prefix.active {
-      color: #eeeeee; }
+      color: #ffab91; }
   .input-field .prefix ~ input,
   .input-field .prefix ~ textarea,
   .input-field .prefix ~ label,
@@ -4941,11 +4948,11 @@ textarea {
 [type="radio"]:checked + span:after,
 [type="radio"].with-gap:checked + span:before,
 [type="radio"].with-gap:checked + span:after {
-  border: 2px solid #eeeeee; }
+  border: 2px solid #ffab91; }
 
 [type="radio"]:checked + span:after,
 [type="radio"].with-gap:checked + span:after {
-  background-color: #eeeeee; }
+  background-color: #ffab91; }
 
 [type="radio"]:checked + span:after {
   transform: scale(1.02); }
@@ -5035,8 +5042,8 @@ textarea {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #eeeeee;
-  border-bottom: 2px solid #eeeeee;
+  border-right: 2px solid #ffab91;
+  border-bottom: 2px solid #ffab91;
   transform: rotate(40deg);
   backface-visibility: hidden;
   transform-origin: 100% 100%; }
@@ -5053,7 +5060,7 @@ textarea {
   height: 22px;
   border-top: none;
   border-left: none;
-  border-right: 2px solid #eeeeee;
+  border-right: 2px solid #ffab91;
   border-bottom: none;
   transform: rotate(90deg);
   backface-visibility: hidden;
@@ -5108,8 +5115,8 @@ textarea {
   top: 0;
   width: 20px;
   height: 20px;
-  border: 2px solid #eeeeee;
-  background-color: #eeeeee;
+  border: 2px solid #ffab91;
+  background-color: #ffab91;
   z-index: 0; }
 
 [type="checkbox"].filled-in.tabbed:focus + span:not(.lever):after {
@@ -5119,8 +5126,8 @@ textarea {
 
 [type="checkbox"].filled-in.tabbed:checked:focus + span:not(.lever):after {
   border-radius: 2px;
-  background-color: #eeeeee;
-  border-color: #eeeeee; }
+  background-color: #ffab91;
+  border-color: #ffab91; }
 
 [type="checkbox"].filled-in:disabled:not(:checked) + span:not(.lever):before {
   background-color: transparent;
@@ -5156,7 +5163,7 @@ textarea {
     .switch label input[type=checkbox]:checked + .lever:before, .switch label input[type=checkbox]:checked + .lever:after {
       left: 18px; }
     .switch label input[type=checkbox]:checked + .lever:after {
-      background-color: #eeeeee; }
+      background-color: #ffab91; }
 
 .switch label .lever {
   content: "";
@@ -5181,7 +5188,7 @@ textarea {
     top: -3px;
     transition: left 0.3s ease, background .3s ease, box-shadow 0.1s ease, transform .1s ease; }
   .switch label .lever:before {
-    background-color: rgba(238, 238, 238, 0.15); }
+    background-color: rgba(255, 171, 145, 0.15); }
   .switch label .lever:after {
     background-color: #F1F1F1;
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12); }
@@ -5189,7 +5196,7 @@ textarea {
 input[type=checkbox]:checked:not(:disabled) ~ .lever:active::before,
 input[type=checkbox]:checked:not(:disabled).tabbed:focus ~ .lever::before {
   transform: scale(2.4);
-  background-color: rgba(238, 238, 238, 0.15); }
+  background-color: rgba(255, 171, 145, 0.15); }
 
 input[type=checkbox]:not(:disabled) ~ .lever:active:before,
 input[type=checkbox]:not(:disabled).tabbed:focus ~ .lever::before {
@@ -5246,7 +5253,7 @@ select {
     user-select: none;
     z-index: 1; }
     .select-wrapper input.select-dropdown:focus {
-      border-bottom: 1px solid #eeeeee; }
+      border-bottom: 1px solid #ffab91; }
   .select-wrapper .caret {
     position: absolute;
     right: 0;
@@ -5374,7 +5381,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #eeeeee;
+  background-color: #ffab91;
   margin-left: 7px;
   transform-origin: 50% 50%;
   transform: rotate(-45deg); }
@@ -5382,7 +5389,7 @@ input[type=range] + .thumb {
     display: block;
     width: 30px;
     text-align: center;
-    color: #eeeeee;
+    color: #ffab91;
     font-size: 0;
     transform: rotate(45deg); }
   input[type=range] + .thumb.active {
@@ -5406,15 +5413,15 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #eeeeee;
+  background: #ffab91;
   transition: box-shadow .3s;
   -webkit-appearance: none;
-  background-color: #eeeeee;
+  background-color: #ffab91;
   transform-origin: 50% 50%;
   margin: -5px 0 0 0; }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-webkit-slider-thumb {
-  box-shadow: 0 0 0 10px rgba(238, 238, 238, 0.26); }
+  box-shadow: 0 0 0 10px rgba(255, 171, 145, 0.26); }
 
 input[type=range] {
   /* fix for FF unable to apply focus style bug  */
@@ -5434,7 +5441,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #eeeeee;
+  background: #ffab91;
   transition: box-shadow .3s;
   margin-top: -5px; }
 
@@ -5443,7 +5450,7 @@ input[type=range]:-moz-focusring {
   outline-offset: -1px; }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-moz-range-thumb {
-  box-shadow: 0 0 0 10px rgba(238, 238, 238, 0.26); }
+  box-shadow: 0 0 0 10px rgba(255, 171, 145, 0.26); }
 
 input[type=range]::-ms-track {
   height: 3px;
@@ -5464,11 +5471,11 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #eeeeee;
+  background: #ffab91;
   transition: box-shadow .3s; }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-ms-thumb {
-  box-shadow: 0 0 0 10px rgba(238, 238, 238, 0.26); }
+  box-shadow: 0 0 0 10px rgba(255, 171, 145, 0.26); }
 
 /***************
     Nav List
@@ -5491,11 +5498,11 @@ input[type=range]::-ms-thumb {
   .table-of-contents a:hover {
     color: #a8a8a8;
     padding-left: 15px;
-    border-left: 1px solid #f5f5f5; }
+    border-left: 1px solid #fafafa; }
   .table-of-contents a.active {
     font-weight: 500;
     padding-left: 14px;
-    border-left: 2px solid #f5f5f5; }
+    border-left: 2px solid #fafafa; }
 
 .sidenav {
   position: fixed;
@@ -5543,9 +5550,9 @@ input[type=range]::-ms-thumb {
     .sidenav li > a.btn-flat {
       color: #343434; }
     .sidenav li > a.btn:hover, .sidenav li > a.btn-large:hover, .sidenav li > a.btn-small:hover, .sidenav li > a.btn-large:hover {
-      background-color: #fbfbfb; }
+      background-color: #ffbeab; }
     .sidenav li > a.btn-floating:hover {
-      background-color: #eeeeee; }
+      background-color: #ffab91; }
     .sidenav li > a > i,
     .sidenav li > a > [class^="mdi-"], .sidenav li > a li > a > [class*="mdi-"],
     .sidenav li > a > i.material-icons {
@@ -5628,7 +5635,7 @@ input[type=range]::-ms-thumb {
 
 .sidenav .collapsible-body > ul:not(.collapsible) > li.active,
 .sidenav.sidenav-fixed .collapsible-body > ul:not(.collapsible) > li.active {
-  background-color: #f5f5f5; }
+  background-color: #fafafa; }
   .sidenav .collapsible-body > ul:not(.collapsible) > li.active a,
   .sidenav.sidenav-fixed .collapsible-body > ul:not(.collapsible) > li.active a {
     color: #fff; }
@@ -5701,7 +5708,7 @@ input[type=range]::-ms-thumb {
   width: 100%;
   height: 100%;
   opacity: 0;
-  border-color: #eeeeee; }
+  border-color: #ffab91; }
 
 .spinner-blue,
 .spinner-blue-only {
@@ -6179,7 +6186,7 @@ input[type=range]::-ms-thumb {
   position: absolute;
   font-size: 1rem;
   border-radius: 50%;
-  background-color: #f5f5f5;
+  background-color: #fafafa;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.14), 0 10px 50px 0 rgba(0, 0, 0, 0.12), 0 30px 10px -20px rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 100%;
@@ -6293,7 +6300,7 @@ input[type=range]::-ms-thumb {
 /* Date Display */
 .datepicker-date-display {
   flex: 1 auto;
-  background-color: #eeeeee;
+  background-color: #ffab91;
   color: #fff;
   padding: 20px 22px;
   font-weight: 500; }
@@ -6330,9 +6337,9 @@ input[type=range]::-ms-thumb {
     border-radius: 50%;
     padding: 0; }
     .datepicker-table td.is-today {
-      color: #eeeeee; }
+      color: #ffab91; }
     .datepicker-table td.is-selected {
-      background-color: #eeeeee;
+      background-color: #ffab91;
       color: #fff; }
     .datepicker-table td.is-outside-current-month, .datepicker-table td.is-disabled {
       color: rgba(0, 0, 0, 0.3);
@@ -6349,7 +6356,7 @@ input[type=range]::-ms-thumb {
   cursor: pointer;
   color: inherit; }
   .datepicker-day-button:focus {
-    background-color: rgba(238, 238, 238, 0.25); }
+    background-color: rgba(252, 172, 148, 0.25); }
 
 /* Footer */
 .datepicker-footer {
@@ -6363,7 +6370,7 @@ input[type=range]::-ms-thumb {
 .datepicker-clear,
 .datepicker-today,
 .datepicker-done {
-  color: #eeeeee;
+  color: #ffab91;
   padding: 0 1rem; }
 
 .datepicker-clear {
@@ -6400,7 +6407,7 @@ input[type=range]::-ms-thumb {
 /* Clock Digital Display */
 .timepicker-digital-display {
   flex: 1 auto;
-  background-color: #eeeeee;
+  background-color: #ffab91;
   padding: 10px;
   font-weight: 300; }
 
@@ -6471,7 +6478,7 @@ input[type=range]::-ms-thumb {
 
 .timepicker-tick.active,
 .timepicker-tick:hover {
-  background-color: rgba(238, 238, 238, 0.25); }
+  background-color: rgba(255, 171, 145, 0.25); }
 
 .timepicker-dial {
   transition: transform 350ms, opacity 350ms; }
@@ -6486,7 +6493,7 @@ input[type=range]::-ms-thumb {
 .timepicker-canvas {
   transition: opacity 175ms; }
   .timepicker-canvas line {
-    stroke: #eeeeee;
+    stroke: #ffab91;
     stroke-width: 4;
     stroke-linecap: round; }
 
@@ -6495,11 +6502,11 @@ input[type=range]::-ms-thumb {
 
 .timepicker-canvas-bearing {
   stroke: none;
-  fill: #eeeeee; }
+  fill: #ffab91; }
 
 .timepicker-canvas-bg {
   stroke: none;
-  fill: #eeeeee; }
+  fill: #ffab91; }
 
 /* Footer */
 .timepicker-footer {
@@ -6512,7 +6519,7 @@ input[type=range]::-ms-thumb {
   color: #F44336; }
 
 .timepicker-close {
-  color: #eeeeee; }
+  color: #ffab91; }
 
 .timepicker-clear,
 .timepicker-close {
@@ -6535,4 +6542,30 @@ input[type=range]::-ms-thumb {
 
 .content_header {
   height: 20vh;
-  background-color: #f5f5f5; }
+  background-image: url(/assets/img/citrics.jpg);
+  background-size: cover; }
+
+.img-mirror {
+  transform: scaleX(-1); }
+
+img {
+  object-fit: cover;
+  object-position: center; }
+
+.main {
+  background-color: white;
+  margin-top: 3vh; }
+
+body {
+  background: #ffe5de; }
+
+.btn-card {
+  position: absolute;
+  right: 24px;
+  bottom: -20px; }
+
+.info {
+  margin-top: 2em; }
+
+svg {
+  fill: #fafafa; }
