--- a/assets/scss/components/_variables.scss
+++ b/assets/scss/components/_variables.scss
@@ -34,11 +34,13 @@
 // 1. Colors
 // ==========================================================================
 
-$primary-color: color("grey", "lighten-4") !default;
+$primary-color: color("grey", "lighten-5") !default;
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
-$secondary-color: color("grey", "lighten-3") !default;
+$secondary-color: color("deep-orange", "lighten-3") !default;
+$secondary-color-light: lighten($secondary-color, 15%) !default;
+$secondary-color-dark: darken($secondary-color, 15%) !default; 
 $success-color: color("green", "base") !default;
 $error-color: color("red", "base") !default;
 $link-color: color("light-blue", "darken-1") !default;
@@ -242,7 +244,7 @@ $element-bottom-margin: ($gutter-width*2)/3 !default;
 // 13. Navigation Bar
 // ==========================================================================
 
-$navbar-height: 30px !default;
+$navbar-height: 40px !default;
 $navbar-line-height: $navbar-height !default;
 $navbar-height-mobile: 30px !default;
 $navbar-line-height-mobile: $navbar-height-mobile !default;
@@ -303,7 +305,7 @@ $toast-action-color: #eeff41;
 // 20. Typography
 // ==========================================================================
 
-$font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
+$font-stack: Raleway, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
 $off-black: rgba(0, 0, 0, 0.87) !default;
 // Header Styles
 $h1-fontsize: 4.2rem !default;
@@ -347,3 +349,8 @@ $collection-line-height: 1.5rem !default;
 // ==========================================================================
 
 $progress-bar-color: $secondary-color !default;
+
+
+
+$height:100%;
+$width:100%;
