--- a/assets/scss/components/_grid.scss
+++ b/assets/scss/components/_grid.scss
@@ -16,10 +16,10 @@
     margin-top: 8vh;
   }
 }
-.col .row {
-  margin-left: (-1 * $gutter-width / 2);
-  margin-right: (-1 * $gutter-width / 2);
-}
+// .col .row {
+//   margin-left: (-1 * $gutter-width / 2);
+//   margin-right: (-1 * $gutter-width / 2);
+// }
 
 .section {
   padding-top: 1rem;
