--- a/assets/scss/components/_grid.scss
+++ b/assets/scss/components/_grid.scss
@@ -2,18 +2,17 @@
   margin: 0 auto;
   max-width: 1280px;
   width: 90%;
-  margin-top: 3vh;
 }
 @media #{$medium-and-up} {
   .container {
     width: 85%;
-    margin-top: 6vh;
+    // margin-top: 6vh;
   }
 }
 @media #{$large-and-up} {
   .container {
     width: 70%;
-    margin-top: 8vh;
+    // margin-top: 8vh;
   }
 }
 // .col .row {
