--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2567,18 +2567,15 @@ table span.badge {
 .container {
   margin: 0 auto;
   max-width: 1280px;
-  width: 90%;
-  margin-top: 3vh; }
+  width: 90%; }
 
 @media only screen and (min-width: 601px) {
   .container {
-    width: 85%;
-    margin-top: 6vh; } }
+    width: 85%; } }
 
 @media only screen and (min-width: 993px) {
   .container {
-    width: 70%;
-    margin-top: 8vh; } }
+    width: 70%; } }
 
 .section {
   padding-top: 1rem;
@@ -3789,7 +3786,7 @@ button.btn-floating {
     right: 0;
     text-align: center;
     position: absolute;
-    bottom: 64px;
+    bottom: 50px;
     margin: 0;
     visibility: hidden; }
     .fixed-action-btn ul li {
@@ -6392,7 +6389,7 @@ input[type=range]::-ms-thumb {
 
 .content_header {
   height: 20vh;
-  background-image: url(/assets/img/citrics.jpg);
+  background-image: url(../img/citrics.jpg);
   background-size: cover; }
 
 .img-mirror {
@@ -6405,6 +6402,14 @@ img {
 .main {
   background-color: white;
   margin-top: 3vh; }
+
+@media only screen and (min-width: 601px) {
+  .main {
+    margin-top: 6vh; } }
+
+@media only screen and (min-width: 993px) {
+  .main {
+    margin-top: 8vh; } }
 
 body {
   background: #ffe5de; }
