--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -36,8 +36,7 @@ nav {
     height: 100%;
     ul{
       width: 100vw;
-      display: flex;
-      justify-content: space-around;//valentina
+    //valentina
     }
   }
 
