--- a/assets/scss/components/_global.scss
+++ b/assets/scss/components/_global.scss
@@ -159,7 +159,6 @@ i {
 img.responsive-img,
 video.responsive-video {
   max-width: 100%;
-  height: 100%;
 }
 
 
@@ -377,7 +376,7 @@ ul.staggered-list li {
 
 // Footer
 .page-footer {
-  padding-top: 20px;
+  padding-top: 3vh;
   color: $footer-font-color;
   background-color: $footer-bg-color;
 
@@ -390,6 +389,16 @@ ul.staggered-list li {
     padding: 10px 0px;
     color: $footer-copyright-font-color;
     background-color: $footer-copyright-bg-color;
+  }
+}
+@media #{$medium-and-up} {
+  .page-footer {
+      margin-top: 6vh;
+  }
+  }
+@media #{$large-and-up} {
+  .page-footer {
+      margin-top: 8vh;
   }
 }
 
